# PosiPhone

./: .clang-format  .gitignore  .gitignore.swp  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.md  build.sh
GUI/: CMakeLists.txt  PosiPhone.qrc  audio.cpp  audio.h  login_widget.cpp  login_widget.h  main.cpp  message.cpp  message.h  mock.cpp  mock.h  model.cpp  model.h  move_item.cpp  move_item.h  moveitem.cpp  moveitem.h  producer.cpp  producer.h  queueconsumer.cpp  queueconsumer.h  user.cpp  user.h  view.cpp  view.h  view.ui  view_fwd.h
GUI/GUI/: GUI.pro  main.cpp  model.cpp  model.h  model.ui  moveitem.cpp  moveitem.h
client/: CMakeLists.txt  audio.cpp  audio.h  audio_buffer.cpp  audio_buffer.h  audio_button.cpp  audio_button.h  client.cpp  client.h  login_widget.cpp  login_widget.h  mock.cpp  mock.h  model.cpp  model.h  model_fwd.h  move_item.cpp  user.cpp  user.h  view.cpp  view.h  view.ui
common/: client_fwd.h  common_server.cpp  message.cpp  message.h  network_utils.cpp  network_utils.h  server_fwd.h
include/GUI/: audio.h  login_widget.h  message.h  mock.h  model.h  model_fwd.h  move_item.h  producer.h  user.h  view.h  view.ui
include/Mixer/: mixer.h
include/Network/: client.h  client_fwd.h  network_utils.h  server.h  server_fwd.h  server_network_module.h
mixer/: main.cpp
mixer/AudioFile/: AudioFile.h
my_zmq/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
my_zmq/include/: client.h  my_utils.h  server.h  server_fwd.h
my_zmq/src/: client.cpp  my_utils.cpp  server.cpp
resources/: resources.qrc
server/: AudioFile.h  CMakeLists.txt  TODO.md  chat_client.cpp  chat_server.cpp  client.cpp  common_client.cpp  mixer.cpp  mixer.h  network_utils.cpp  server.cpp  server_main.cpp  server_network_module.cpp  server_network_module.h
src/GUI/: audio.cpp  login_widget.cpp  main.cpp  message.cpp  mock.cpp  model.cpp  move_item.cpp  producer.cpp  view.cpp
src/Mixer/: mixer.cpp
src/Network/: client.cpp  common_server.cpp  server.cpp
test_websocket/test/: test.pro
